--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>Start</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
+<link rel=stylesheet href='common.css'>
 <nav>
   <a>1</a>
   <a>2</a>
