--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link rel=stylesheet href='common.css'>
 <nav>
-  <a>1</a>
+  <a href=platonic.html>1</a>
   <a>2</a>
 </nav>
