--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link rel=stylesheet href='common.css'>
+<style>
+nav {
+  color:var(--theme);
+}
+</style>
 <nav>
   <a href=platonic.html>1</a>
   <a>2</a>
