--- a/platonic.html
+++ b/platonic.html
@@ -2,11 +2,9 @@
 <title>Platonic</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
-<script src='platonic.js'></script>
-<script>
-const Q=(el,func)=>func? document.querySelectorAll(el).forEach(func):document.querySelector(el);
-</script>
+<script src='common.js'></script>
 <link rel=stylesheet href='common.css'>
+<script src='platonic.js'></script>
 <style>
 menu {
     margin-top:2em;margin-bottom:1em;
