--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Start</title>
+<title>Showcase - by Veiga Man</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link rel=stylesheet href='common.css'>
