--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ nav a:hover::before {
 </style>
 <nav>
   <a href='https://beyblade.epizy.com'>Beyblade Burst</a>
-  <a href='https://vocarevo.rf.gd'>VCRV Project</a>
+  <a href='http://vocarevo.rf.gd'>VCRV Project</a>
   <a href='platonic.html'>Platonic & Archimedean solids</a>
   <a href='disk.html'>Colored disks</a>
   <a href='capillary.html'>Drum & Tube</a>
