--- a/index.html
+++ b/index.html
@@ -44,3 +44,7 @@ nav a:hover::before {
   <a href='capillary.html'>Drum & Tube</a>
   <a href='cube.html'>Flying cubes</a>
 </nav>
+
+<script>
+fetch('test.json').then(r=>r.json()).then(j=>console.log(j));
+</script>
